--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         ✌️
       </button>
     </div>
-    <div id="result1"></div>
-    <div id="score">Wins: 0, Losses:0, Ties:0</div>
+    <div id="result"></div>
+    <div id="score">
+      <span id="win">Win:0</span>
+      <span id="tie">Tie:0</span>
+      <span id="loss">Loss:0</span>
+    </div>
     <button onclick="reset()" id="reset">Reset Score</button>
     <div id="popup">
       <h1>Rock Paper Scissor</h1>
