--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rock Paper Scissor</title>
   </head>
   <body>
-    <h2>Please choose something</h2>
+    <h2>Choose one</h2>
     <div id="container">
       <button class="action" id="rock" onclick="action('rock')">✊</button>
       <button class="action" id="paper" onclick="action('paper')">✋</button>
